# codeskel

./: .gitignore  Cargo.toml  README.md
docs/: prd-changelog.md  prd-codeskel-refs.md  prd-next-command.md  prd-next-target.md  prd-refs-multilang.md  prd.md  suggestions.md
docs/superpowers/plans/: 2026-04-02-codeskel.md  2026-04-03-signature-enrichment-and-pom.md  2026-04-13-chain-and-refs.md  2026-04-14-refs-multilang.md  2026-04-15-next-command.md  2026-04-16-compact-output.md  2026-04-16-next-target.md  2026-04-17-output-size-and-docstring-metadata.md  2026-04-21-reverse-deps.md
docs/superpowers/specs/: 2026-04-03-signature-enrichment-and-pom-design.md  2026-04-13-chain-and-refs-design.md  2026-04-16-compact-output-design.md  2026-04-17-output-size-and-docstring-metadata-design.md  2026-04-21-reverse-deps-design.md
skills/comment/: SKILL.md
skills/comment/evals/: evals.json
src/: cache.rs  cli.rs  docstring.rs  envelope.rs  error.rs  generated.rs  graph.rs  lang.rs  lib.rs  lockfile.rs  main.rs  models.rs  resolver.rs  scanner.rs  session.rs  walker.rs
src/commands/: get.rs  mod.rs  next.rs  pom.rs  rescan.rs  scan.rs
src/parsers/: cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
src/refs/: java.rs  mod.rs
tests/: integration_scan.rs
tests/fixtures/java_project/src/com/example/: Base.java  Service.java
tests/fixtures/java_project/src/com/example/repo/: JpaUserRepository.java  UserRepository.java
tests/fixtures/python_project/: service.py  utils.py
(+3 files in other folders)
