[package]
name = "codeskel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeskel"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.38", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
rayon = "=1.10.0"
walkdir = "2"
globset = "=0.4.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
